# sales-analytics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMPLETE_VERIFICATION_REPORT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  nginx.conf  pyproject.toml  test_all_queries_auto.sh  test_results.md
.claude/: architecture.md  conventions.md  project_knowledge.md
.claude/skills/: add-graphql-query.md  debug-query.md  run-tests.md  start-dev.md  test-graphql.md
docs/: API.md  ARCHITECTURE.md  CELERY_USAGE.md  DEVELOPMENT.md  DOCS_MAP.md  GRAPHQL_QUERY_EXAMPLES.md  HOT_RELOAD.md  IMPLEMENTATION_GUIDE.md  MIGRATIONS.md  PHASE_6_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REQUIREMENT.md  TEMPLATE_GUIDE.md  VERIFICATION_SUMMARY.md
docs/api/: API_REFERENCE.md  ERROR_CODES.md  RATE_LIMITING.md  VALIDATION.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: DEPLOYMENT_GUIDE.md  EC2_DOCKER_DEPLOYMENT.md  README.md
docs/development/: SETUP_GUIDE.md  TESTING_GUIDE.md
examples/: cache_usage_example.py  graphql_usage_examples.md
frontend/: .env.example  Dockerfile  Dockerfile.prod  FRONTEND_README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/customers/: CustomerSegmentsChart.tsx  CustomersTable.tsx
frontend/src/components/dashboard/: DateRangeSelector.tsx  RevenueChart.tsx  StatCard.tsx  TopProductsTable.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/products/: LowStockAlert.tsx  ProductsTable.tsx
frontend/src/components/salesreps/: SalesRepsLeaderboard.tsx
frontend/src/graphql/: mutations.ts  queries.ts
frontend/src/pages/: Customers.tsx  Dashboard.tsx  Products.tsx  SalesReps.tsx
frontend/src/utils/: dateHelpers.ts
migrations/: env.py
migrations/versions/: 001_create_indexes.sql  002_partition_orders.sql  003_materialized_views.sql  003_materialized_views.sql.bak  004_aggregation_tables.sql  004_aggregation_tables.sql.bak  027d5f181c40_initial_schema.py
scripts/: init_db.py  seed_database.py
src/: __init__.py  celery_app.py  main.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: example_endpoints.py  urls.py
src/core/: cache.py  cache_decorators.py  config.py  database.py  exception_handlers.py  exceptions.py
src/graphql/: __init__.py  dataloaders.py  mutations.py  queries.py  schema.py  types.py
src/middleware/: __init__.py  rate_limiting.py
src/models/: __init__.py  base.py  category.py  customer.py  example_model.py  order.py  order_item.py  product.py  sales_rep.py
src/schemas/: __init__.py  common.py  example_schema.py  url.py  validation.py
src/services/: __init__.py  analytics_service.py  cache_invalidation.py  customer_service.py  example_service.py  order_service.py  product_service.py  sales_rep_service.py  url_service.py
src/tasks/: __init__.py  analytics_tasks.py  maintenance_tasks.py  notification_tasks.py
tests/: conftest.py  test_cache.py  test_graphql_queries.sh
tests/integration/: test_urls.py
